<resources>
    <string name="next">Next</string>
    <string name="init">Init…</string>
    <string name="unable_to_download_file">Unable to download file</string>
    <string name="connection_not_valid">Selected network route not allowed with current settings you have setup</string>
    <string name="invalid_sip_uri">Sip uri is invalid for call</string>
    <string name="accounts">Accounts</string>
    <string name="other_accounts">Other accounts</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="activate_account">Activate account</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="delete_account">Delete account</string>
    <string name="modify_account">Modify account</string>
    <string name="add_account">Add account</string>
    <string name="choose_wizard">Choose wizard</string>
    <string name="use">Use :</string>
    <string name="use_pstn">Use mobile</string>
    <string name="ongoing_call">Call in Progress</string>
    <string name="missed_call">Missed call</string>
    <string name="recentCalls_empty">No Call Logs</string>
    <string name="filters">Filters</string>
    <string name="filters_desc">To apply when integration to Android is used</string>
    <string name="filters_for">Filters for</string>
    <string name="add_filter">Add filter / rewrite rule</string>
    <string name="delete_filter">Delete filter</string>
    <string name="callLog_delete_entry">Delete this call</string>
    <string name="callLog_delete_all">Delete all calls</string>
    <string name="callLog_delDialog_title">Delete Call Logs</string>
    <string name="callLog_delDialog_message">Are you sure you want to delete all calls from the log?</string>
    <string name="callLog_delDialog_yes">Yes</string>
    <string name="callLog_delDialog_no">No</string>
    <string name="gsm">Mobile</string>
    <string name="dial_tab_name_text">Dial</string>
    <string name="calllog_tab_name_text">CallLogs</string>
    <string name="messages_tab_name_text">Messages</string>
    <string name="favorites_tab_name_text">Favorites</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="service_ticker_registered_text">QDMobile SIP Registered</string>
    <string name="service_ticker_no_registered_text">QDMobile SIP has not been registered</string>
    <string name="outgoing_call_chooser_call_text">Call</string>
    <string name="reorder">Reorder</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="record_logs">Record logs to send it to dev team and report a bug</string>
    <string name="send_logs">Stop recording logs (OPTIONALLY send it)</string>
    <string name="view_existing_issues">Consult existing issues</string>
    <string name="ok">OK</string>
    <string name="misc">Misc</string>
    <string name="warning">WARNING</string>
    <string name="disconnect_and_incoming_explaination">You are configured to be available for this network !!! By clicking OK here you confirm that you don\'t want to be available until next start of the application</string>
    <string name="disconnect_and_future_incoming_explaination">By disconnecting the application, you will not be available on SIP until next start of the application, whatever network settings you set</string>
    <string name="gadget_title">SIP - Account switcher</string>
    <string name="pickup_sip_uri">Pickup SIP contact</string>
    <string name="display_icon_in_status_bar_desc">Should the application display an icon in the status bar when registered</string>
    <string name="display_icon_in_status_bar">Display icon in status bar</string>
    <string name="another_application_use_sip_port">Another application is currently using SIP port! Can\'t start !!!</string>
    <string name="no_phone_found">No phone found for this contact</string>
    <string name="show_password">Show password</string>
    <string name="this_codec_is_not_free">**This codec is not free !!!**\nPlease ensure that somebody (your SIP provider or yourself) have purchased a license that allow you to use this codec! We (as application distributors) are not responsible for an illegal use of this codec.\nIt\'s up to you to be sure that you are authorized to use this codec.\nPurchase link : </string>
    <string name="voice_mail">Voice mail</string>
    <string name="voice_mail_number">VM number</string>
    <string name="type_sip_uri_or_autocomplete">Sip uri or autocomplete</string>
    <string name="not_configured_multiple_calls">The application is not configured to allow multiple calls</string>
    <string name="legal_information">Legal information</string>
    <string name="update_nightly_build">Update nightly build</string>
    <string name="loading">Loading</string>
    <string name="reconnect">Reconnect</string>
    <string name="switch_to_text">Switch to text mode</string>
    <string name="switch_to_digit">Switch to digit mode</string>
    <string name="no_voice_mail_configured">No voicemail configured</string>
    <string name="no_accounts">No accounts</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="invert_selection">Invert selection</string>
    <string name="cant_write_file">Error writing file</string>
    <string name="info">Info</string>
    <string name="csipsimple_shortcut">SIP - shortcut</string>
    <string name="apply_rewrite">Apply rewriting</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="away">Away</string>
    <string name="busy">Busy</string>
    <string name="activate_presence_sharing">Share presence</string>
    <string name="deactivate_presence_sharing">Stop sharing presence</string>
    <string name="presence">Presence</string>
    <string name="configure">Configure</string>
    <string name="set_android_group">Choose android group</string>
    <string name="set_sip_data">Choose sip uri data</string>
    <string name="uri_nbr">Phone number</string>
    <string name="uri_im">IM with custom SIP scheme</string>
    <string name="uri_sip">Internet call</string>
    <string name="menu_dialpad">Dialpad</string>
    <string name="menu_recents">Call Log</string>
    <string name="menu_messages">Message</string>
    <string name="menu_more">More</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="add_account_title">Add Account</string>
    <string name="add_account_scan">Scan QR code</string>
    <string name="add_account_manually">Add it manually</string>
    <string name="action_settings">Settings</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
</resources>