<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >

    <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_shape"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/ll_menu_btn"
            />

    <LinearLayout
            android:id="@+id/ll_menu_btn"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/_ics_dial_bg_normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

        <TextView
                android:id="@+id/menu_dialpad"
                android:text="@string/menu_dialpad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:drawableTop="@drawable/icon_keypad_idle"
                android:drawablePadding="5dp"
                android:gravity="center|bottom"
                android:layout_gravity="center"
                />


        <TextView
                android:id="@+id/menu_recents"
                android:text="@string/menu_recents"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:drawableTop="@drawable/icon_recents_idle"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                />

        <TextView
                android:id="@+id/menu_contacts"
                android:text="联系人"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:drawableTop="@drawable/icon_contacts_idle"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                />

        <TextView
                android:id="@+id/menu_messages"
                android:text="@string/menu_messages"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:drawableTop="@drawable/icon_messages_idle"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                />

        <TextView
                android:id="@+id/menu_settings"
                android:text="@string/menu_more"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:drawableTop="@drawable/icon_settings_idle"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                />


        <!--<TextView-->
        <!--android:text="设置"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="12sp"-->
        <!--android:drawableTop="@drawable/icon_messages_idle"-->
        <!--android:drawablePadding="5dp"-->
        <!--android:gravity="center"-->
        <!--android:layout_gravity="center"-->
        <!--/>-->


        <!--<RelativeLayout-->
        <!--android:id="@+id/rl_dialpad"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_dial_call"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/main_menu_dial_call_btn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:text="键盘"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:textSize="12sp"-->
        <!--android:layout_below="@+id/iv_dial_call"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="bottom"-->
        <!--/>-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:id="@+id/rl_recents"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_rencents"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/main_menu_recents_btn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:text="最近通话"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:textSize="12sp"-->
        <!--android:layout_below="@+id/iv_rencents"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="bottom"-->
        <!--/>-->

        <!--</RelativeLayout>-->


        <!--<RelativeLayout-->
        <!--android:id="@+id/rl_contacts"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_contacts"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/main_menu_contacts_btn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:text="联系人"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:textSize="12sp"-->
        <!--android:layout_below="@+id/iv_contacts"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="bottom"-->
        <!--/>-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:id="@+id/rl_messages"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_messages"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/main_menu_messages_btn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:text="信息"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:textSize="12sp"-->
        <!--android:layout_below="@+id/iv_messages"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="bottom"-->
        <!--/>-->

        <!--</RelativeLayout>-->


        <!--<RelativeLayout-->
        <!--android:id="@+id/rl_settings"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!-->-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_settings"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/main_menu_more_btn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingTop="10dp"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:text="设置"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:textSize="12sp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="center_vertical"-->
        <!--/>-->

        <!--</RelativeLayout>-->

    </LinearLayout>


</RelativeLayout>



